Changes to iPad Config

--- a/index.html
+++ b/index.html
@@ -386,7 +386,6 @@
     <div id="currentCountLiveBP">Current Count: 0-0</div>
     <div id="raceWinsLiveBP">Race Wins:</div>
     <div id="strikePercentageLiveBP">Strike %: 0</div>
-    <ul id="pitchLog"></ul>
   </div>
 
   <!-- NEW: At‑Bat Summary -->
@@ -394,6 +393,14 @@
     <h3>At‑Bat Summary</h3>
     <ul id="atBatLog"></ul>
   </div>
+
+  <aside id="pitchLogDrawer" class="pitchlog-drawer">
+    <button id="pitchLogDrawerToggle" type="button" aria-expanded="false">Pitch Log</button>
+    <div id="pitchLogDrawerHeader">Pitch Log</div>
+    <div id="pitchLogDrawerContent">
+      <ul id="pitchLog"></ul>
+    </div>
+  </aside>
 </div> <!-- /#mainPanel -->  
 
   <!-- INTENDED ZONE MODE -->
